# Mango

./: .cursorignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  TODO_UPGRADES.md  mypy.ini  pyproject.toml  requirements-dev.txt  requirements-pinned.txt  requirements.txt  ruff.toml  run-desktop.ps1  run-dev.ps1  run-tests.ps1
docs/: ROADMAP.md  competitor_matrix.md  implementation_changelog.md  interruption_profiles.md  memory-tiers.md  post_improvement_validation_report_2026-05-29.md  recommended.env
mango/: WAKE_OWW.md  __init__.py  __main__.py  always_listen_gate.py  audio.py  badge_fastpath.py  badges.py  config.py  config_build.py  config_dotenv.py  config_env.py  config_sections.py  continuous_listen.py  conversation.py  desktop_app.py  desktop_events.py  desktop_ipc.py  desktop_smart.py  discord_bridge_launcher.py  discord_music_sync.py  discord_play_fastpath.py  discord_tts_client.py  discord_voice_audio.py  discord_voice_bot.py  discord_voice_client.py  discord_voice_control.py  doctor.py  duo_chat_cli.py  duo_prompt.py  elevenlabs_api.py  globe_server.py  handoff_contracts.py  integration_services.py  interruption_policy.py  jarvis_hud.py  listen_chime.py  llm.py  llm_tool_loop.py  logging_setup.py  main.py  (+47 more)
mango-app/: .env.development  README.md  index.html  package-lock.json  package.json  vite.config.ts
scripts/: cleanup-local-artifacts.ps1  connect-github.ps1  create-mango-desktop-shortcut.ps1  fix_mango_imports.py  healthcheck.ps1  relocate_mango_packages.py  run-mango-desktop.ps1  run_mango_oww_test.ps1  setup-env.ps1  setup-xbox-auth.ps1  smoke_open_apps.py  split_config.py  start-mango-discord.ps1  start-mango-full.ps1  stop-mango-discord.ps1
tests/: conftest.py  test_always_listen_gate.py  test_badge_fastpath.py  test_badge_status.py  test_badges.py  test_chat_resilience.py  test_config_load.py  test_desktop_events.py  test_disabled_tools.py  test_discord_bridge_launcher.py  test_discord_play_fastpath.py  test_duo_chat_cli.py  test_handoff_contracts.py  test_interruption_policy.py  (+27 more)
(+180 files in other folders)
