[build-system]

requires = ["setuptools>=61"]

build-backend = "setuptools.build_meta"



[project]

name = "mango-voice-assistant"

version = "0.1.0"

description = "Push-to-talk voice assistant for Windows (Whisper, Groq/Ollama, Edge TTS)"

readme = "README.md"

requires-python = ">=3.11"

dependencies = [

  "groq>=0.11.0",

  "python-dotenv>=1.0.0",

  "faster-whisper>=1.0.0",

  "edge-tts>=6.1.0",

  "keyboard>=0.13.5",

  "sounddevice>=0.5.0",

  "numpy>=1.26.0",

  "psutil>=5.9.0",

  "httpx>=0.27.0",

  "ddgs>=9.0.0",

  "tzdata>=2024.1",

  "plyer>=2.1.0",

  "pyperclip>=1.9.0",

]



[project.optional-dependencies]

wake = [

  "openwakeword>=0.6.0",

  "onnxruntime>=1.16.0",

]

discord = [

  "discord.py-self[voice]>=2.1.0",

]

desktop = [

  "pygame>=2.5.0",

  "pywebview>=5.0",

  "mss>=9.0.0",

  "pycaw>=20240210",

  "comtypes>=1.4.0",

]

full = [

  "openwakeword>=0.6.0",

  "onnxruntime>=1.16.0",

  "discord.py-self[voice]>=2.1.0",

  "pygame>=2.5.0",

  "pywebview>=5.0",

  "mss>=9.0.0",

  "pycaw>=20240210",

  "comtypes>=1.4.0",

]

dev = [

  "pytest>=8.0.0",

  "ruff>=0.14.0",

  "mypy>=1.18.0",

  "pre-commit>=4.0.0",

  "types-requests>=2.32.0",

]



[tool.setuptools.packages.find]

where = ["."]

include = ["mango*"]



[tool.pytest.ini_options]

testpaths = ["tests"]

pythonpath = ["."]

